fixed overflow

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 10px;
-  // overflow: hidden;
+  overflow: hidden;
 }
 
 
