--- a/app/assets/stylesheets/pages/_scan_events.scss
+++ b/app/assets/stylesheets/pages/_scan_events.scss
@@ -125,7 +125,7 @@ html, body{
 
 body{
   background: $bg-color;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .title{
@@ -273,11 +273,6 @@ body{
 html, body{
   width: 100%;
   height: 100%;
-}
-
-body{
-  background: $bg-color;
-  overflow: hidden;
 }
 
 .title{
